--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-jwt": "^5.0.0",
     "hiredis": "^0.5.0",
     "mongoose": "^4.6.2",
     "redis": "^2.6.2",
