--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     ],
     "plugins": [
       "transform-runtime"
-    ]
+    ],
+    "sourceMaps": "both"
   },
   "author": "352inc <devops@352inc.com> (http://352inc.com/)",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-2": "^6.17.0",
-    "babel-preset-stage-3": "^6.17.0",
-    "nodemon": "^1.10.2"
+    "babel-preset-stage-3": "^6.17.0"
   },
   "dependencies": {
     "babel-runtime": "^6.11.6",
