--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "build": "babel src -d dist --presets es2015,stage-2,stage-3"
+    "build": "babel src -d dist --presets es2015,stage-2,stage-3",
+    "generate-docs": "./node_modules/jsdoc/jsdoc.js ./src/ -r -c jsdoc.conf.json -d ./documentation"
   },
   "babel": {
     "presets": [
@@ -28,7 +29,9 @@
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-2": "^6.17.0",
-    "babel-preset-stage-3": "^6.17.0"
+    "babel-preset-stage-3": "^6.17.0",
+    "jsdoc": "^3.4.2",
+    "jsdoc-strip-async-await": "^0.1.0"
   },
   "dependencies": {
     "babel-runtime": "^6.11.6",
