--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "babel-runtime": "^6.11.6",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
     "express-jwt": "^5.0.0",
     "hiredis": "^0.5.0",
