--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^4.14.0",
     "express-jwt": "^5.0.0",
     "hiredis": "^0.5.0",
+    "lodash": "^4.16.4",
     "mongoose": "^4.6.2",
     "redis": "^2.6.2",
     "request": "^2.75.0",
