--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "compression": "^1.6.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
-    "express-jwt": "^5.0.0",
     "hiredis": "^0.5.0",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.16.4",
     "mongoose": "^4.6.2",
     "redis": "^2.6.2",
     "request": "^2.75.0",
+    "socket.io": "^1.5.0",
+    "socket.io-redis": "^1.1.1",
     "socketio": "^1.0.0",
     "winston": "^2.2.0"
   }
