--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.11.6",
+    "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
@@ -43,7 +44,9 @@
     "hiredis": "^0.5.0",
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.16.4",
+    "moment": "^2.15.1",
     "mongoose": "^4.6.2",
+    "node-uuid": "^1.4.7",
     "redis": "^2.6.2",
     "request": "^2.75.0",
     "socket.io": "^1.5.0",
