--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,20 @@ version: '2'
 services:
   mongo:
     image: mongo:3.2
-  reddis:
+  redis:
     image: redis:3.2
   api:
     build: .
     depends_on:
       - mongo
-      - reddis
+      - redis
     links:
       - mongo
-      - reddis
+      - redis
     ports: 
       - 8080:9000
     volumes:
       - .:/code
     environment:
       MONGO_URI: mongodb://mongo:27017
-      REDIS_SOCKETIO_HOST: reddis
+      REDIS_SOCKETIO_HOST: redis
