--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ version: '2'
 services:
   mongo:
     image: mongo:3.2
+    # restart: always 
   redis:
     image: redis:3.2
+    # restart: always
   api:
     build: .
     depends_on:
@@ -19,3 +21,4 @@ services:
     environment:
       MONGO_URI: mongodb://mongo:27017
       REDIS_SOCKETIO_HOST: redis
+    # restart: always
